--- a/src/app/WatchWare/Instrument/edit-instrument/edit-instrument.component.html
+++ b/src/app/WatchWare/Instrument/edit-instrument/edit-instrument.component.html
@@ -1,1 +1,195 @@
-<p>edit-instrument works!</p>
+<div class="my-5 p-6 bg-white rounded-lg shadow-lg">
+    <span class="text-xl font-bold text-gray-900 mb-4">Update Protocol</span>
+    <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
+        <div class="lg:col-span-3">
+            <!-- <div class="text-gray-900 font-medium text-lg">Protocol Information</div> -->
+            <p class="text-gray-600 text-sm">Provide the details for the protocol configuration.</p>
+        </div>
+        <div class="lg:col-span-9">
+            <form [formGroup]="protocolForm" (ngSubmit)="onSubmit()" class="space-y-4">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+
+                    <!-- Protocol Type -->
+                    <div>
+                        <label for="ProtocolType" class="font-medium text-gray-700 text-900">Protocol Type</label>
+                        <input id="ProtocolType" type="text" formControlName="ProtocolType"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                        <small
+                            *ngIf="protocolForm.get('ProtocolType')?.invalid && protocolForm.get('ProtocolType')?.touched"
+                            class="text-red-500 text-sm">
+                            Protocol Type is required.
+                        </small>
+                    </div>
+
+                    <!-- Communication Type -->
+                    <div>
+                        <label for="CommunicationType" class="font-medium text-gray-700 text-900">Communication
+                            Type</label>
+
+                        <select id="CommunicationType" formControlName="CommunicationType"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                            <option *ngFor="let type of CommunicationTypes" [value]="type">{{ type }}
+                            </option>
+                        </select>
+                        <small
+                            *ngIf="protocolForm.get('CommunicationType')?.invalid && protocolForm.get('CommunicationType')?.touched"
+                            class="text-red-500 text-sm">
+                            Communication Type is required.
+                        </small>
+                    </div>
+
+                    <!-- Command -->
+                    <div>
+                        <label for="Command" class="font-medium text-gray-700 text-900">Command</label>
+                        <input id="Command" type="text" formControlName="Command"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                        <small *ngIf="protocolForm.get('Command')?.invalid && protocolForm.get('Command')?.touched"
+                            class="text-red-500 text-sm">
+                            Command is required.
+                        </small>
+                    </div>
+
+                    <!-- Com Port -->
+                    <div *ngIf="protocolForm.get('CommunicationType')?.value === 'C'">
+                        <label for="ComPort" class="font-medium text-gray-700 text-900">Com Port</label>
+                        <input id="ComPort" type="text" formControlName="ComPort"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                        <small *ngIf="protocolForm.get('ComPort')?.invalid && protocolForm.get('ComPort')?.touched"
+                            class="text-red-500 text-sm">
+                            Com Port is required.
+                        </small>
+                    </div>
+
+                    <!-- Baud Rate -->
+                    <div *ngIf="protocolForm.get('CommunicationType')?.value === 'C'">
+                        <label for="BaudRate" class="font-medium text-gray-700 text-900">Baud Rate</label>
+
+                        <select id="BaudRate" formControlName="BaudRate"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                            <option *ngFor="let type of BaudRates" [value]="type">{{ type }}
+                            </option>
+                        </select>
+                        <small *ngIf="protocolForm.get('BaudRate')?.invalid && protocolForm.get('BaudRate')?.touched"
+                            class="text-red-500 text-sm">
+                            Baud Rate is required.
+                        </small>
+                    </div>
+
+                    <!-- Parity -->
+                    <div *ngIf="protocolForm.get('CommunicationType')?.value === 'C'">
+                        <label for="Parity" class="font-medium text-gray-700 text-900">Parity</label>
+
+                        <select id="Parity" formControlName="Parity"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                            <option *ngFor="let type of Parity" [value]="type">{{ type}}
+                            </option>
+                        </select>
+                        <small *ngIf="protocolForm.get('Parity')?.invalid && protocolForm.get('Parity')?.touched"
+                            class="text-red-500 text-sm">
+                            Parity is required.
+                        </small>
+                    </div>
+
+                    <!-- Data Bits -->
+                    <div *ngIf="protocolForm.get('CommunicationType')?.value === 'C'">
+                        <label for="DataBits" class="font-medium text-gray-700 text-900">Data Bits</label>
+
+                        <select id="DataBits" formControlName="DataBits"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                            <option *ngFor="let type of DataBits" [value]="type">{{ type }}
+                            </option>
+                        </select>
+                        <small *ngIf="protocolForm.get('DataBits')?.invalid && protocolForm.get('DataBits')?.touched"
+                            class="text-red-500 text-sm">
+                            Data Bits are required.
+                        </small>
+                    </div>
+
+                    <!-- Stop Bits -->
+                    <div *ngIf="protocolForm.get('CommunicationType')?.value === 'C'">
+                        <label for="StopBits" class="font-medium text-gray-700 text-900">Stop Bits</label>
+
+                        <select id="StopBits" formControlName="StopBits"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                            <option *ngFor="let type of StopBits" [value]="type">{{ type }}
+                            </option>
+                        </select>
+                        <small *ngIf="protocolForm.get('StopBits')?.invalid && protocolForm.get('StopBits')?.touched"
+                            class="text-red-500 text-sm">
+                            Stop Bits are required.
+                        </small>
+                    </div>
+
+                    <!-- IP Address -->
+                    <div
+                        *ngIf="protocolForm.get('CommunicationType')?.value === 'IP' || protocolForm.get('CommunicationType')?.value === 'UDP'">
+                        <label for="IpAddress" class="font-medium text-gray-700 text-900">IP Address</label>
+                        <input id="IpAddress" type="text" formControlName="IpAddress"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                        <small *ngIf="protocolForm.get('IpAddress')?.invalid && protocolForm.get('IpAddress')?.touched"
+                            class="text-red-500 text-sm">
+                            IP Address is required.
+                        </small>
+                    </div>
+
+                    <!-- Port -->
+                    <div
+                        *ngIf="protocolForm.get('CommunicationType')?.value === 'IP' || protocolForm.get('CommunicationType')?.value === 'UDP'">
+                        <label for="Port" class="font-medium text-gray-700 text-900">Port</label>
+                        <input id="Port" type="number" formControlName="Port"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500"
+                            min="1" step="1">
+                        <small *ngIf="protocolForm.get('Port')?.invalid && protocolForm.get('Port')?.touched"
+                            class="text-red-500 text-sm">
+                            Port is required.
+                        </small>
+                    </div>
+
+                    <!-- Manufacturer -->
+                    <div>
+                        <label for="Manufacturer" class="font-medium text-gray-700 text-900">Manufacturer</label>
+                        <input id="Manufacturer" type="text" formControlName="Manufacturer"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                        <small
+                            *ngIf="protocolForm.get('Manufacturer')?.invalid && protocolForm.get('Manufacturer')?.touched"
+                            class="text-red-500 text-sm">
+                            Manufacturer is required.
+                        </small>
+                    </div>
+
+                    <!-- Model -->
+                    <div>
+                        <label for="Model" class="font-medium text-gray-700 text-900">Model</label>
+                        <input id="Model" type="text" formControlName="Model"
+                            class="w-full px-3 py-2 border border-gray-400 rounded-md focus:ring-2 focus:ring-blue-400 focus:border-blue-500">
+                        <small *ngIf="protocolForm.get('Model')?.invalid && protocolForm.get('Model')?.touched"
+                            class="text-red-500 text-sm">
+                            Model is required.
+                        </small>
+                    </div>
+
+                </div>
+
+                <!-- Submit Button -->
+                <div class="flex gap-4 mt-4">
+                    <button type="submit" [disabled]="Loading"
+                        class="mt-1 px-4 py-2 bg-accent text-white rounded-md hover:bg-secondary transition disabled:bg-gray-500 disabled:cursor-not-allowed">
+
+                        <span *ngIf="Loading">
+                            <i class="fas fa-spinner fa-spin mr-2"></i>
+                        </span>
+                        <span *ngIf="!Loading">
+
+                        </span>
+
+                        <span>Update</span>
+                    </button>
+                    <button type="button" (click)="goBack()"
+                        class="mt-1 px-4 py-2 bg-gray-500 text-white rounded-md hover:bg-gray-600">
+                        Cancel
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
