--- a/src/app/WatchWare/UsersManagement/list-users/list-users.component.html
+++ b/src/app/WatchWare/UsersManagement/list-users/list-users.component.html
@@ -41,7 +41,7 @@
                 </th>
                 <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Active
                 </th>
-                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Action
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:10%">Action
                 </th>
             </tr>
         </ng-template>
@@ -67,11 +67,11 @@
                     <div class="flex gap-2">
 
 
-                        <button *ngIf="user.Active" type="button"
+                        <button *ngIf="user.Active" (click)="onDeactivate(user)" type="button"
                             class="px-2  text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
                             Deactivate
                         </button>
-                        <button *ngIf="!user.Active" type="button"
+                        <button *ngIf="!user.Active" (click)="onActivate(user)" type="button"
                             class="px-2  text-blue-500 border border-blue-500 rounded-md hover:bg-blue-500 hover:text-white transition">
                             Activate
                         </button>
@@ -82,8 +82,29 @@
         </ng-template>
         <ng-template #emptymessage>
             <tr>
-                <td colspan="7">No Users found.</td>
+                <td colspan="8">No Users found.</td>
             </tr>
         </ng-template>
     </p-table>
 </div>
+
+<p-confirmdialog #cd>
+    <ng-template #headless let-message let-onAccept="onAccept" let-onReject="onReject">
+        <div class="flex flex-col items-center p-8 bg-surface-0 dark:bg-surface-900 rounded">
+            <div
+                class="rounded-full bg-primary text-primary-contrast inline-flex justify-center items-center h-24 w-24 -mt-20">
+                <i class="fa fa-rotate !text-5xl"></i>
+            </div>
+            <span class="font-bold text-2xl block mb-2 mt-6">{{ message.header }}</span>
+            <p class="mb-0">{{ message.message }}</p>
+            <div class="flex items-center gap-2 mt-6">
+                <button
+                    [ngClass]="'mt-1 px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-700 transition disabled:bg-gray-500 disabled:cursor-not-allowed'"
+                    (click)="onAccept()" class="w-32">Delete</button>
+                <button
+                    [ngClass]="'mt-1 px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-700 transition disabled:bg-gray-500 disabled:cursor-not-allowed'"
+                    (click)="onReject()" class="w-32">Cancel</button>
+            </div>
+        </div>
+    </ng-template>
+</p-confirmdialog>
