--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,8 @@
       </div> -->
 
       <button type="button" (click)="goBack()"
-        class="px-4 border border-accent bg-primary text-accent rounded-md hover:bg-accent hover:text-primary transition">
-        <i class="fa fa-arrow-left"></i>
+        class="px-4 py-1 border border-accent bg-primary text-accent rounded-md hover:bg-accent hover:text-primary transition">
+        <i class="fa fa-arrow-left"></i> Back
       </button>
 
       <router-outlet></router-outlet>
